<resources>
    <string name="app_name">Pokebox</string>
    <string name="pokebox_logo" translatable="false">Pokebox logo</string>
    <string name="buscar_por_sets">Search by set</string>
    <string name="b_squeda_avanzada">Advanced search</string>
    <string name="progreso_sets">Set progress</string>
    <string name="comprobar_mazo">Check deck</string>
    <string name="mis_colecciones">My collections</string>
    <string name="buscar">Search…</string>
    <string name="addtocollection">＋ Add to collection</string>
    <string name="filtrosdebusqueda">Search filters</string>
    <string name="rangohp">HP Range</string>
    <string name="bigplus" translatable="false">＋</string>
    <string name="bigminus" translatable="false">🗑</string>
    <string name="card_image" translatable="false">Card image</string>
    <string name="test" translatable="false">test</string>
    <string name="set_logo" translatable="false">Set Logo</string>
    <string name="set_symbol" translatable="false">Set Symbol</string>
    <string name="imagen_carta" translatable="false">Imagen Carta</string>
    <string name="three_lines" translatable="false">≡</string>
    <string name="buscarsinpuntos">Search</string>
    <string name="ordenar_por">Sort by:</string>
    <string name="journey_together" translatable="false">Journey Together</string>
    <string name="lista_sets" translatable="false">Lista Sets</string>
    <string name="cargar_cartas_de_baseset" translatable="false">Cargar cartas de baseset</string>
    <string name="rarity">Rarity</string>
    <string name="legality">Legality</string>
    <string name="artist">Artist</string>
    <string name="supertype">Supertype</string>
    <string name="subtype">Subtype</string>
    <string name="type">Type</string>
    <string name="has_ability">Has Ability</string>
    <string name="nombre_a_z">Name (A-Z)</string>
    <string name="nombre_z_a">Name (Z-A)</string>
    <string name="m_s_recientes_primero">Newest first</string>
    <string name="m_s_antiguas_primero">Oldest first</string>
    <string name="min">Min.</string>
    <string name="max">Max.</string>
    <string name="el_nombre_de_la_colecci_n_no_puede_estar_en_blanco">The name of the collection cannot be empty.</string>
    <string name="coleccion">Collection</string>
    <string name="creada_correctamente">created successfully.</string>
    <string name="una_colecci_n_con_ese_nombre_ya_existe">A collection with that name already exists.</string>
    <string name="cancelar">Cancel</string>
    <string name="crear">Create</string>
    <string name="nombre_de_la_colecci_n">Collection name:</string>
    <string name="no_existen_colecciones">No collections are created.</string>
    <string name="actualizando_la_colecci_n">Updating collection:</string>
    <string name="a_adido_a">Added to</string>
    <string name="error_a_adiendo_a_la_colecci_n">Error while adding to collection</string>
    <string name="carga_completa">Loading finished. (</string>
    <string name="cartas">cards)</string>
    <string name="cargando_sets">Loading sets…</string>
    <string name="in_collection">In collection:</string>
    <string name="select_collection">Select collection:</string>
    <string name="add_card_to_collection">Add card to collection</string>
    <string name="add">Set</string>
    <string name="info_not_available">Info Not Available</string>
    <string name="paste_decklist_here">Paste decklist here…</string>
    <string name="check_cards">Check Cards</string>
    <string name="delete_collection">Delete collection</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete \'%1$s\'?</string>
    <string name="relevant">Relevant</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="all">All</string>
    <string name="avgprice">Avg. price</string>
    <string name="loading">Loading…</string>
    <string name="paste_decklist">Paste decklist</string>
    <string name="decklist_loaded">✓ Decklist loaded</string>
    <string name="no_decklist">No decklist</string>
    <string name="expand_collapse">Expand/Collapse</string>
    <string name="no_log_movements">No movements registered yet</string>
    <string name="log_increased">Increased quantity from %1$d to %2$d</string>
    <string name="log_decreased">Decreased quantity from %1$d to %2$d</string>
    <string name="unknown_card">Unknown card</string>
</resources>